Bug 816805 - Style fixes for RiverTrail code (r=shu)